src/com/fanhl/test/t2015/t01/t20150107/FinalAJavaTest.java
package com.fanhl.test.t2015.t01.t20150107;

/**
 * Created by fanhl on 15/1/7.
 */
public class FinalAJavaTest {
}

class FinalA {
    final int i;

    //error
//    public FinalA() {
//    }

    public FinalA(int i) {
        this.i = i;
    }

}